# liquidsfz

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  Makefile.am  NEWS  OPCODES.md  README.md  README_WINDOWS.md  TODO  configure.ac  liquidsfz.pc.in  testCMakeLists.txt
.github/workflows/: ircbot.py  testing.yml
lib/: .gitignore  Makefile.am  api.cc  argparser.cc  argparser.hh  curve.hh  envelope.hh  filter.hh  hydrogenimport.cc  hydrogenimport.hh  lfogen.cc  lfogen.hh  liquidsfz.cc  liquidsfz.hh  loader.cc  loader.hh  log.cc  log.hh  midnam.cc  midnam.hh  pcg32rng.hh  pugixml.cc  pugixml.hh  samplecache.cc  samplecache.hh  sfpool.cc  sfpool.hh  sfzreader.cc  sfzreader.hh  synth.cc  synth.hh  upsample.hh  utils.cc  utils.hh  voice.cc  voice.hh
lv2/: .gitignore  Makefile.am  dejavu-lgc-sans.ttf.xz  ldscript.map  liquidsfz.ttl.in  liquidsfz_lv2.cc  lv2_midnam.h  lv2plugin.cc  lv2plugin.hh  lv2ui.cc  manifest.ttl  manifest.ttl.in
misc/: Dockerfile  Dockerfile-arch  build.sh  dbuild.sh  macbuild.sh
src/: .gitignore  Makefile.am  TODO  api.cc  api.hh  cliparser.cc  cliparser.hh  envelope.hh  liquidsfz.cc  loader.cc  loader.hh  log.cc  log.hh  opcode-list.sh  pantest.sh  samplecache.hh  synth.hh  testliquid.cc  testperf.cc  testxf.cc  utils.cc  utils.hh  voice.cc  voice.hh
static/: Dockerfile  build-deps.sh  build.sh  config.sh.in
tests/: .gitignore  Makefile.am  gen-upsample.py  testcurve.cc  testenvelope.cc  testfilter.cc  testhydrogen.cc  testliquid.cc  testmidnam.cc  testperf.cc  testsfzreader.cc  testsynth.cc  testupsample.cc  testupsample.sfz  testxf.cc
windows/: Dockerfile  build-deps.sh  build.sh
