lib_LTLIBRARIES = libliquidsfz.la
libliquidsfz_la_LDFLAGS = -static
libliquidsfz_la_SOURCES = liquidsfz.cc liquidsfz.hh loader.cc loader.hh log.hh log.cc \
			  synth.hh synth.cc voice.hh voice.cc utils.hh utils.cc samplecache.hh \
			  envelope.hh

liquidsfzincludedir = $(includedir)
liquidsfzinclude_HEADERS = liquidsfz.hh
